--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Section 5: Advanced JavaScript: Objects and Functions</title>
+        <title>page</title>
     </head>
 
     <body>
-        <h1>Section 5: Advanced JavaScript: Objects and Functions</h1>
         <script src="script.js"></script>
     </body>
 </html>
